done first step

--- a/Analysis-Notebook.ipynb
+++ b/Analysis-Notebook.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
        "4                3.0          129.60  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
        "max      16.000000          46.000000      324.990000  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +632,7 @@
        "freq            2986  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +652,7 @@
        "0"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -670,55 +670,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "CustomerID                       0\n",
-       "Churn                            0\n",
-       "Tenure                         264\n",
-       "PreferredLoginDevice             0\n",
-       "CityTier                         0\n",
-       "WarehouseToHome                251\n",
-       "PreferredPaymentMode             0\n",
-       "Gender                           0\n",
-       "HourSpendOnApp                 255\n",
-       "NumberOfDeviceRegistered         0\n",
-       "PreferedOrderCat                 0\n",
-       "SatisfactionScore                0\n",
-       "MaritalStatus                    0\n",
-       "NumberOfAddress                  0\n",
-       "Complain                         0\n",
-       "OrderAmountHikeFromlastYear    265\n",
-       "CouponUsed                     256\n",
-       "OrderCount                     258\n",
-       "DaySinceLastOrder              307\n",
-       "CashbackAmount                   0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CustomerID                     0\n",
+      "Churn                          0\n",
+      "DaySinceLastOrder              0\n",
+      "OrderCount                     0\n",
+      "CouponUsed                     0\n",
+      "OrderAmountHikeFromlastYear    0\n",
+      "Complain                       0\n",
+      "NumberOfAddress                0\n",
+      "MaritalStatus                  0\n",
+      "SatisfactionScore              0\n",
+      "PreferedOrderCat               0\n",
+      "NumberOfDeviceRegistered       0\n",
+      "HourSpendOnApp                 0\n",
+      "Gender                         0\n",
+      "PreferredPaymentMode           0\n",
+      "WarehouseToHome                0\n",
+      "CityTier                       0\n",
+      "PreferredLoginDevice           0\n",
+      "Tenure                         0\n",
+      "CashbackAmount                 0\n",
+      "dtype: int64\n",
+      "------------------------------\n",
+      "CustomerID                     0.0\n",
+      "Churn                          0.0\n",
+      "DaySinceLastOrder              0.0\n",
+      "OrderCount                     0.0\n",
+      "CouponUsed                     0.0\n",
+      "OrderAmountHikeFromlastYear    0.0\n",
+      "Complain                       0.0\n",
+      "NumberOfAddress                0.0\n",
+      "MaritalStatus                  0.0\n",
+      "SatisfactionScore              0.0\n",
+      "PreferedOrderCat               0.0\n",
+      "NumberOfDeviceRegistered       0.0\n",
+      "HourSpendOnApp                 0.0\n",
+      "Gender                         0.0\n",
+      "PreferredPaymentMode           0.0\n",
+      "WarehouseToHome                0.0\n",
+      "CityTier                       0.0\n",
+      "PreferredLoginDevice           0.0\n",
+      "Tenure                         0.0\n",
+      "CashbackAmount                 0.0\n",
+      "dtype: float64\n"
+     ]
     }
    ],
    "source": [
-    "df.isnull().sum()"
+    "# Print number of missing values in each feature\n",
+    "print(df.isnull().sum().sort_values(ascending=False))\n",
+    "\n",
+    "print('-'*30)\n",
+    "\n",
+    "# Print percentage of missing values in each feature\n",
+    "print(df.isnull().sum().map(lambda x: (x/len(df))*100).sort_values(ascending=False))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There's a feature 'Returns' having 47382 null values on total of 250,000 data rows. <br>\n",
-    "I've checked the description on Kaggle again, null values on Returns stand for non-return orders, so I will fill null with 0 (no return)"
+    "There are 8 columns containing missing values, the amount of missing values take maximum 5% of dataset <br>\n",
+    "Since missing values take under 10% of dataset above features, we fill them with mean value."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.fillna(df.mean, inplace= True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -748,11 +782,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are  948  customers churned.\n",
+      "There are  4682  customers didn't churn.\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_ = df[df['Churn'] == 1]\n",
+    "df_not = df[df['Churn'] == 0]\n",
+    "\n",
+    "print('There are ', len(df_), ' customers churned.')\n",
+    "print('There are ', len(df_not), ' customers didn\\'t churn.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the above amount of customer who churn and not churn, we can see that the dataset is bias since the target Churn which = 1 take only 20% of the dataset"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Notes for later analysis:\n",
-    "- Features with potential insights: Returns, Total Purchase amount, Product Category\n",
+    "- Features with potential insights/relationship with target: Tenure, HourSpendOnApp, SatisfactionScore, Complain, CouponUsed, DaySinceLastOrder.\n",
     "- Question mark on: Purchase Date (is there any seasonal trends?), Customer Age\n",
     "- Relationship between Total Purchase Amount and Churn\n",
     "- Relationship between Payment Method and Returns"
